--- a/banner_demo_gen5/index.html
+++ b/banner_demo_gen5/index.html
@@ -40,9 +40,9 @@
         <p>
             <div>Chọn Demo</div>
             <select id="demochoice">
-                <option value="1" selected>Trang chủ</option>
-                <option value="2" >Bài viết masthead 1016x100</option>
-                <option value="3" >Bài viết masthead 1016x250</option>
+                <option value="1" selected>BG Only</option>
+                <option value="2" >Masthead 1016x100 (1904x1040)</option>
+                <option value="3" >Masthead 1016x250 (1904x1040)</option>
             </select>
         </p>
         <form action="#" id="download_form">
