--- a/export_fullpackage_1day/index.html
+++ b/export_fullpackage_1day/index.html
@@ -74,9 +74,9 @@
             <p>
                 <div>Chọn loại bg để xuất file</div>
                 <select id="demochoice">
-                    <option value="1" selected>Trang chủ (1904x1040)</option>
-                    <option value="2" >Trang trong top 100 (1904x1040)</option>
-                    <option value="3" >Trang trong top 250 (1904x1040)</option>
+                    <option value="1" selected>BG Only</option>
+                    <option value="2" >Masthead 1016x100 (1904x1040)</option>
+                    <option value="3" >Masthead 1016x250 (1904x1040)</option>
                 </select>
             </p>
             <p>
