--- a/export_fullpackage_eve/index.html
+++ b/export_fullpackage_eve/index.html
@@ -44,7 +44,7 @@
         <button class="w3-bar-item w3-button tablink w3-ios-background" onclick="openCity(event,'tab01');showDiv('pcgroup');hideDiv('mbgroup')"><i class="fa fa-map-o"></i> Backgrounds </button>
         <button class="w3-bar-item w3-button tablink" onclick="openCity(event,'tab02');showDiv('pcgroup');hideDiv('mbgroup')"><i class="fa fa-desktop"></i> Các banner pc</button>
         <button class="w3-bar-item w3-button tablink" onclick="openCity(event,'tab03');showDiv('mbgroup');hideDiv('pcgroup')"><i class="fa fa-mobile"></i> Các banner mobile</button>
-        <button class="w3-button w3-red w3-bar-item w3-right" id="zip_btn">Pack it!</button>
+        <button class="w3-button w3-ios-green w3-bar-item w3-right" id="zip_btn">Pack it!</button>
     </div>
     <div class="w3-container w3-padding-16">
         <div class="w3-container w3-ios-deep-blue" id="pcgroup">
@@ -74,11 +74,11 @@
             <p>
                 <div>Chọn loại bg để xuất file</div>
                 <select id="demochoice">
-                    <option value="1" selected>Trang chủ (1904x1040)</option>
-                    <option value="2" >Masthead 1016x100</option>
-                    <option value="3" >Masthead 1016x250</option>
-                    <option value="4" >Suckhoe 1112x100</option>
-                    <option value="5" >Suckhoe 1112x250</option>
+                    <option value="1" selected>BG Only</option>
+                    <option value="2" >Masthead 1016x100 (1904x1040)</option>
+                    <option value="3" >Masthead 1016x250 (1904x1040)</option>
+                    <option value="4" >Suckhoe 1112x100 (2000x1040)</option>
+                    <option value="5" >Suckhoe 1112x250 (2000x1040)</option>
                 </select>
             </p>
             <p>
