--- a/banner_demo_gen5_eve/index.html
+++ b/banner_demo_gen5_eve/index.html
@@ -48,11 +48,11 @@
         <p>
             <div>Chọn Demo</div>
             <select id="demochoice">
-                <option value="1" selected>Trang chủ</option>
-                <option value="2" >Masthead 1016x100</option>
-                <option value="3" >Masthead 1016x250</option>
-                <option value="4" >Suckhoe 1112x100</option>
-                <option value="5" >Suckhoe 1112x250</option>
+                <option value="1" selected>BG Only</option>
+                <option value="2" >Masthead 1016x100 (1904x1040)</option>
+                <option value="3" >Masthead 1016x250 (1904x1040)</option>
+                <option value="4" >Suckhoe 1112x100 (2000x1040)</option>
+                <option value="5" >Suckhoe 1112x250 (2000x1040)</option>
             </select>
         </p>
         <form action="#" id="download_form">
