--- a/aio_templates/index.html
+++ b/aio_templates/index.html
@@ -26,17 +26,13 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Roboto", sans-serif}
   <div class="w3-bar-block">
     <a href="javascript:void(0)" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>  Close Menu</a>
     <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" id="firstTab" onclick="openPage('page1',link1);"><i class="fa fa-html5 fa-fw"></i>  HTML5 Static Image</a>
-    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page2',link2);"><i class="fa fa-laptop fa-fw"></i>  HTML5 Custom PC</a>
-    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page3',link3);"><i class="fa fa-mobile fa-fw"></i>  HTML5 Custom MB</a>
-    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page4',link4);"><i class="fa fa-laptop fa-fw"></i>  Demo Layout PC</a>
-    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page5',link5);"><i class="fa fa-mobile fa-fw"></i>  Demo Layout MB</a>
-    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page6',link6);"><i class="fa fa-newspaper-o fa-fw"></i>  eMagazine</a>
-    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page7',link7);"><i class="fa fa-code fa-fw"></i>  My Scripts</a>
-    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page8',link8);"><i class="fa fa-code fa-fw"></i>  Gsap mini library</a>
-    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page9',link9);"><i class="fa fa-laptop fa-fw"></i>  Demo Inimage Takeover PC</a>
-    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page10',link10);"><i class="fa fa-mobile fa-fw"></i>  Demo Inimage Expand PC</a>
-    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page11',link11);"><i class="fa fa-laptop fa-fw"></i>  Demo Inimage Takeover MB</a>
-    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page12',link12);"><i class="fa fa-mobile fa-fw"></i>  Demo Inimage Expand MB</a>
+    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page2',link2);"><i class="fa fa-code fa-fw"></i>  HTML5 Custom Static</a>
+    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page2',link3);"><i class="fa fa-code fa-fw"></i>  My Scripts</a>
+    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page3',link4);"><i class="fa fa-code fa-fw"></i>  Gsap mini library</a>
+    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page4',link5);"><i class="fa fa-laptop fa-fw"></i>  Demo Inimage Takeover PC</a>
+    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page5',link6);"><i class="fa fa-mobile fa-fw"></i>  Demo Inimage Expand PC</a>
+    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page6',link7);"><i class="fa fa-laptop fa-fw"></i>  Demo Inimage Takeover MB</a>
+    <a href="javascript:void(0)" class="tab w3-bar-item w3-button w3-padding" onclick="openPage('page7',link8);"><i class="fa fa-mobile fa-fw"></i>  Demo Inimage Expand MB</a>
   </div>
 </nav>
 
@@ -71,18 +67,6 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Roboto", sans-serif}
     <!-- Page 8 -->
     <div id="page8" class="w3-container page"></div>
 
-    <!-- Page 9 -->
-    <div id="page9" class="w3-container page"></div>
-
-    <!-- Page 10 -->
-    <div id="page10" class="w3-container page"></div>
-
-    <!-- Page 11 -->
-    <div id="page11" class="w3-container page"></div>
-
-    <!-- Page 12 -->
-    <div id="page12" class="w3-container page"></div>
-
     <!-- End PAGE CONTENT -->
 </div>
 
@@ -111,17 +95,13 @@ function w3_close() {
 }
 // URL
 var link1 = '<iframe src="html5s.html" frameborder="0" scrolling="no" style="width: 100%;height: 50vh;"></iframe>';
-var link2 = '<iframe src="html5c_25pc.html" frameborder="0" scrolling="no" style="width: 100%;height: 120vh;"></iframe>';
-var link3 = '<iframe src="html5c_25mb.html" frameborder="0" scrolling="no" style="width: 100%;height: 100vh;"></iframe>';
-var link4 = '<iframe src="/banner_demo_gen5/index.html" frameborder="0" scrolling="no" style="width: 100%;height: 300vh;"></iframe>';
-var link5 = '<iframe src="/banner_demo_gen4/index.html" frameborder="0" scrolling="no" style="width: 100%;height: 100vh;"></iframe>';
-var link6 = '<iframe src="/mg_sample_codes/index.html" frameborder="0" scrolling="no" style="width: 100%;height: 150vh;"></iframe>';
-var link7 = '<iframe src="/my_scripts/index.html" frameborder="0" scrolling="no" style="width: 100%;height: 100vh;"></iframe>';
-var link8 = '<iframe src="/gsap_gen/index_ntttoon.html" frameborder="0" scrolling="no" style="width: 100%;height: 100vh;"></iframe>';
-var link9 = '<iframe src="/banner_demo_gen3b1/index.html" frameborder="0" scrolling="no" style="width: 100%;height: 50vh;"></iframe>';
-var link10 = '<iframe src="/banner_demo_gen3b2/index.html" frameborder="0" scrolling="no" style="width: 100%;height: 50vh;"></iframe>';
-var link11 = '<iframe src="/banner_demo_gen3c1/index.html" frameborder="0" scrolling="no" style="width: 100%;height: 50vh;"></iframe>';
-var link12 = '<iframe src="/banner_demo_gen3c2/index.html" frameborder="0" scrolling="no" style="width: 100%;height: 50vh;"></iframe>';
+var link2 = '<iframe src="html5c.html" frameborder="0" scrolling="no" style="width: 100%;height: 100vh;"></iframe>';
+var link3 = '<iframe src="/my_scripts/index.html" frameborder="0" scrolling="no" style="width: 100%;height: 100vh;"></iframe>';
+var link4 = '<iframe src="/gsap_gen/index_ntttoon.html" frameborder="0" scrolling="no" style="width: 100%;height: 100vh;"></iframe>';
+var link5 = '<iframe src="/banner_demo_gen3b1/index.html" frameborder="0" scrolling="no" style="width: 100%;height: 50vh;"></iframe>';
+var link6 = '<iframe src="/banner_demo_gen3b2/index.html" frameborder="0" scrolling="no" style="width: 100%;height: 50vh;"></iframe>';
+var link7 = '<iframe src="/banner_demo_gen3c1/index.html" frameborder="0" scrolling="no" style="width: 100%;height: 50vh;"></iframe>';
+var link8 = '<iframe src="/banner_demo_gen3c2/index.html" frameborder="0" scrolling="no" style="width: 100%;height: 50vh;"></iframe>';
 // Open page
 openPage("page1")
 function openPage(personName,link) {
