--- a/banner_tu_dong/index.html
+++ b/banner_tu_dong/index.html
@@ -6,12 +6,18 @@
 <link rel="stylesheet" href="../css/w3.css">
 <script src="../js_libs/konva.min.js"></script>
 <script src="../js_libs/jscolor.js"></script>
-<!--<link href="https://fonts.googleapis.com/css?family=Noto+Serif&amp;subset=vietnamese" rel="stylesheet">-->
-<!--<link href="https://fonts.googleapis.com/css?family=Lora|Lobster|Roboto|Roboto+Condensed|Farsan|Anton&amp;subset=vietnamese" rel="stylesheet">-->
-<link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Yeseva+One|Noto+Serif:400,700|Roboto:400,700&display=swap&subset=vietnamese" rel="stylesheet">
+
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="../js_libs/Animated_GIF.js"></script>
+<script>
+    WebFont.load({
+      google: {
+        families: ['Alfa Slab One', 'Yeseva One', 'Noto Serif:400,700', 'Roboto:400,700']
+      }
+    });
+  </script>
 <script>
     var galtemplate = 'json/templates.json';
     var gal1 = 'json/gallery1.json';
