--- a/animejs/text_animation1_words.html
+++ b/animejs/text_animation1_words.html
@@ -53,7 +53,7 @@
     <h1 class="ml1">
         <span class="text-wrapper">
             <span class="line line1"></span>
-            <span class="letters">THURSDAY</span>
+            <span class="words">It is a good day to live</span>
             <span class="line line2"></span>
         </span>
     </h1>
@@ -61,21 +61,20 @@
     <script>
         // https://stackoverflow.com/questions/8609170/how-to-wrap-each-word-of-an-element-in-a-span-tag
         function wrapChars(str) {
-            return str.replace(/\S/g, "<span class='letter'>$&</span>");
+            return str.replace(/\w/g, "<span class='letter'>$&</span>");
         }
         function wrapWords(str) {
-            return str.replace(/\S+/g, "<span class='word'>$&</span>");
+            return str.replace(/\w+/g, "<span class='word'>$&</span>");
         }
         function wrapLines(str) {
             return str.replace(/.+$/gm, "<span class='line'>$&</span>");
         }
-        var textWrapper = document.querySelector('.ml1 .letters');
-        //textWrapper.innerHTML = textWrapper.textContent.replace(/\S/g, "<span class='letter'>$&</span>");
-        textWrapper.innerHTML = wrapChars(textWrapper.textContent)
+        var textWrapper = document.querySelector('.ml1 .words');
+        textWrapper.innerHTML = wrapWords(textWrapper.textContent)
 
         anime.timeline({loop: true})
         .add({
-            targets: '.ml1 .letter',
+            targets: '.ml1 .word',
             scale: [0.3,1],
             opacity: [0,1],
             translateZ: 0,
