--- a/animejs/text_animation1_gsap.html
+++ b/animejs/text_animation1_gsap.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://s0.2mdn.net/ads/studio/cached_libs/gsap_3.5.1_min.js"></script>
     <style>
         body{
             font-family: 'Open Sans', sans-serif;
@@ -53,7 +54,7 @@
     <h1 class="ml1">
         <span class="text-wrapper">
             <span class="line line1"></span>
-            <span class="words">It is a good day to live</span>
+            <span class="letters">THURSDAY</span>
             <span class="line line2"></span>
         </span>
     </h1>
@@ -61,41 +62,22 @@
     <script>
         // https://stackoverflow.com/questions/8609170/how-to-wrap-each-word-of-an-element-in-a-span-tag
         function wrapChars(str) {
-            return str.replace(/\w/g, "<span class='letter'>$&</span>");
+            return str.replace(/\S/g, "<span class='letter'>$&</span>");
         }
         function wrapWords(str) {
-            return str.replace(/\w+/g, "<span class='word'>$&</span>");
+            return str.replace(/\S+/g, "<span class='word'>$&</span>");
         }
         function wrapLines(str) {
             return str.replace(/.+$/gm, "<span class='line'>$&</span>");
         }
-        var textWrapper = document.querySelector('.ml1 .words');
-        textWrapper.innerHTML = wrapWords(textWrapper.textContent)
+        var textWrapper = document.querySelector('.ml1 .letters');
+        //textWrapper.innerHTML = textWrapper.textContent.replace(/\S/g, "<span class='letter'>$&</span>");
+        textWrapper.innerHTML = wrapChars(textWrapper.textContent)
 
-        anime.timeline({loop: true})
-        .add({
-            targets: '.ml1 .word',
-            scale: [0.3,1],
-            opacity: [0,1],
-            translateZ: 0,
-            easing: "easeOutExpo",
-            duration: 600,
-            delay: (el, i) => 70 * (i+1)
-        }).add({
-            targets: '.ml1 .line',
-            scaleX: [0,1],
-            opacity: [0.5,1],
-            easing: "easeOutExpo",
-            duration: 700,
-            offset: '-=875',
-            delay: (el, i, l) => 80 * (l - i)
-        }).add({
-            targets: '.ml1',
-            opacity: 0,
-            duration: 1000,
-            easing: "easeOutExpo",
-            delay: 1000
-        });
+        var tl = gsap.timeline({repeat: -1});
+        tl.fromTo(".ml1 .letter", {opacity: 0,scale: 0.2}, {opacity: 1, scale: 1, duration: 0.5, stagger: 0.1, ease: "easeOutExpo"})
+        .fromTo(".ml1 .line", {opacity: 0, scaleX: 0}, {opacity: 1, scaleX: 1, duration: 0.5, ease: "easeOutExpo"})
+        .to(".ml1", {opacity: 0, duration: 1, delay: 1,ease: "easeOutExpo"});
     </script>
 </body>
 </html>
