--- a/banner_demo_gen5/index.html
+++ b/banner_demo_gen5/index.html
@@ -40,9 +40,11 @@
         <p>
             <div>Chọn Demo</div>
             <select id="demochoice">
-                <option value="1" selected>BG Only</option>
+                <option value="1" selected>BG Only (1904x1040)</option>
                 <option value="2" >Masthead 1016x100 (1904x1040)</option>
                 <option value="3" >Masthead 1016x250 (1904x1040)</option>
+                <option value="4" >Masthead 1100x100 (1988x1040)</option>
+                <option value="5" >Masthead 1100x250 (1988x1040)</option>
             </select>
         </p>
         <form action="#" id="download_form">
@@ -63,6 +65,16 @@
                 </label>
                 <br>
                 <label>
+                    <input type="checkbox" id="check_bd100" data-url="templates/bd100.html" data-folder="false" />
+                    bd100.html
+                </label>
+                <br>
+                <label>
+                    <input type="checkbox" id="check_bd250" data-url="templates/bd250.html" data-folder="false" />
+                    bd250.html
+                </label>
+                <br>
+                <label>
                     <input type="checkbox" id="check_top_menu" class="hide" data-url="templates/images/top_menu.jpg" data-folder="true" checked />
                     top_menu.jpg
                 </label>
@@ -73,13 +85,13 @@
                 </label>
                 <br>
                 <label>
-                    <input type="checkbox" id="check_bv100_jpg" data-url="templates/images/bv100.jpg" data-folder="true" />
-                    bv100.jpg
+                    <input type="checkbox" id="check_bv_jpg" data-url="templates/images/bv.jpg" data-folder="true" />
+                    bv.jpg
                 </label>
                 <br>
                 <label>
-                    <input type="checkbox" id="check_bv250_jpg" data-url="templates/images/bv250.jpg" data-folder="true" />
-                    bv250.jpg
+                    <input type="checkbox" id="check_bd_jpg" data-url="templates/images/bd.jpg" data-folder="true" />
+                    bd.jpg
                 </label>
                 <br>
                 <label>
@@ -184,11 +196,11 @@
             <img id="img_right_to_holder" class="w3-image">
         </div>
         <div class="w3-col w3-container divide_five">
-            <div>Bg trái 205x900</div>
+            <div>Bg trái 205x900/170x900</div>
             <img id="img_left_nho_holder" class="w3-image">
         </div>
         <div class="w3-col w3-container divide_five">
-            <div>Bg phải 205x900</div>
+            <div>Bg phải 205x900/170x900</div>
             <img id="img_right_nho_holder" class="w3-image">
         </div>
     </div>
@@ -289,7 +301,7 @@
     // });
 
     function setUncheck(){
-        $("#check_trangchu, #check_bv100, #check_bv250, #check_trangchu_jpg, #check_bv100_jpg, #check_bv250_jpg").prop( "checked", false );
+        $("#check_trangchu, #check_bv100, #check_bv250, #check_bd100, #check_bd250, #check_trangchu_jpg, #check_bv_jpg, #check_bd_jpg").prop( "checked", false );
     };
 
     $( "#demochoice" ).change(function() {
@@ -297,31 +309,72 @@
             setUncheck();
             $("#check_trangchu, #check_trangchu_jpg").prop( "checked", true );
             document.getElementById('pw').value = 1016;
+            document.getElementById('sw').value = 205;
             var page_width = Number(document.getElementById('pw').value);
-            var top1 = document.getElementById("top100");
-            var top2 = document.getElementById("top250");
-            top1.width = page_width;
-            top2.width = page_width;
         }
         if(this.value == 2){
             setUncheck();
-            $("#check_bv100, #check_bv100_jpg").prop( "checked", true );
+            $("#check_bv100, #check_bv_jpg").prop( "checked", true );
             document.getElementById('pw').value = 1016;
+            document.getElementById('sw').value = 205;
             var page_width = Number(document.getElementById('pw').value);
+            var small_width = Number(document.getElementById('sw').value);
             var top1 = document.getElementById("top100");
             var top2 = document.getElementById("top250");
             top1.width = page_width;
             top2.width = page_width;
+            var lnho = document.getElementById("left_nho");
+            var rnho = document.getElementById("right_nho");
+            lnho.width = small_width;
+            rnho.width = small_width;
         }
         if(this.value == 3){
             setUncheck();
-            $("#check_bv250, #check_bv250_jpg").prop( "checked", true );
+            $("#check_bv250, #check_bv_jpg").prop( "checked", true );
             document.getElementById('pw').value = 1016;
+            document.getElementById('sw').value = 205;
             var page_width = Number(document.getElementById('pw').value);
+            var small_width = Number(document.getElementById('sw').value);
             var top1 = document.getElementById("top100");
             var top2 = document.getElementById("top250");
             top1.width = page_width;
             top2.width = page_width;
+            var lnho = document.getElementById("left_nho");
+            var rnho = document.getElementById("right_nho");
+            lnho.width = small_width;
+            rnho.width = small_width;
+        }
+        if(this.value == 4){
+            setUncheck();
+            $("#check_bd100, #check_bd_jpg").prop( "checked", true );
+            document.getElementById('pw').value = 1100;
+            document.getElementById('sw').value = 170;
+            var page_width = Number(document.getElementById('pw').value);
+            var small_width = Number(document.getElementById('sw').value);
+            var top1 = document.getElementById("top100");
+            var top2 = document.getElementById("top250");
+            top1.width = page_width;
+            top2.width = page_width;
+            var lnho = document.getElementById("left_nho");
+            var rnho = document.getElementById("right_nho");
+            lnho.width = small_width;
+            rnho.width = small_width;
+        }
+        if(this.value == 5){
+            setUncheck();
+            $("#check_bd250, #check_bd_jpg").prop( "checked", true );
+            document.getElementById('pw').value = 1100;
+            document.getElementById('sw').value = 170;
+            var page_width = Number(document.getElementById('pw').value);
+            var small_width = Number(document.getElementById('sw').value);
+            var top1 = document.getElementById("top100");
+            var top2 = document.getElementById("top250");
+            top1.width = page_width;
+            top2.width = page_width;
+            var lnho = document.getElementById("left_nho");
+            var rnho = document.getElementById("right_nho");
+            lnho.width = small_width;
+            rnho.width = small_width;
         }
     });
     ///////////////////////// Load input file into div holder
@@ -432,8 +485,8 @@
         if( document.getElementById("imageLoader").files.length !== 0 ){
             assets.file("left_to.jpg", data_left_to.substr(data_left_to.indexOf(',')+1), {base64: true});
             assets.file("right_to.jpg", data_right_to.substr(data_right_to.indexOf(',')+1), {base64: true});
-            assets.file("1016100.jpg", data_top100.substr(data_top100.indexOf(',')+1), {base64: true});
-            assets.file("1016250.jpg", data_top250.substr(data_top250.indexOf(',')+1), {base64: true});
+            assets.file("top100.jpg", data_top100.substr(data_top100.indexOf(',')+1), {base64: true});
+            assets.file("top250.jpg", data_top250.substr(data_top250.indexOf(',')+1), {base64: true});
         }
         if( document.getElementById("imageLoader2").files.length !== 0 ){
             assets.file("left_nho.jpg", data_left_nho.substr(data_left_nho.indexOf(',')+1), {base64: true});
